Bug 132286 - Preview image on Page Style dialog shows fill applied incorrectly
Summary: Preview image on Page Style dialog shows fill applied incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.3.2 release
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Page-Style-Dialog
  Show dependency treegraph
 
Reported: 2020-04-21 03:53 UTC by Mike Kaganski
Modified: 2025-06-03 11:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-04-21 03:53:35 UTC
Since fix for tdf#33041/tdf#112195, Writer fills whole page with area color, including margins. However, the preview image in Page Style dialog shows the color only applied inside margins. It should either not show the area color (and e.g. highlight currently edited part like header/footer with some color instead), or show it right.
Comment 1 Dieter 2020-04-21 11:51:24 UTC
I confirm it with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

Preview image should show it right. If it doesn't show the area color, this will prioduce new bug reports.
Comment 2 BogdanB 2021-12-03 18:41:51 UTC
Still in
Version: 7.3.0.0.beta1+ / LibreOffice Community
Build ID: 81b26582ed62db40e2be701ddefede7d8230d0d2
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 QA Administrators 2023-12-04 03:14:38 UTC Comment hidden (obsolete)
Comment 4 Dieter 2023-12-28 18:31:28 UTC
Still present in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40617d867346956588ac023511f31210107217f4
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 5 Commit Notification 2025-06-03 11:36:45 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47ef490e4244dc804502729b8c29206bf841f02b

Resolves tdf#132286, Related 165604 - Page/Column Preview

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.