Resolves tdf#132286, Related 165604 - Page/Column Preview

Blank background showing the margins correctly
and feedback for column line color (columns dialog only)

Change-Id: I9f2a277e91ed7644d90cc12a5f1bfd0f4e97e0fc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186141
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>